# vsg-skills

./: .gitignore  LICENSE  README.md
.claude/skills/vsg/: .gitignore  AGENTS.md  SKILL.md
.claude/skills/vsg/examples/: CMakeLists.txt  README.md  build-examples.sh  builder_primitives.cpp  custom_geometry.cpp  hello_vsg.cpp  view_model.cpp
.claude/skills/vsg/probe/: CMakeLists.txt  README.md  probe.cpp  run-probe.sh
.claude/skills/vsg/references/: anti-patterns.md  patterns.md
.claude/skills/vsg/references/components/: animation.md  app.md  commands.md  core.md  io.md  lighting.md  maths.md  scene-graph.md  state.md  text.md  threading.md  utils.md
.claude/skills/vsg/references/examples/: builder-primitives.md  custom-geometry.md  hello-vsg.md  index.md  view-model.md
.claude/skills/vsg/references/foundations/: object-model.md  rendering-model.md  scene-and-state.md
.claude/skills/vsg/scripts/: check-citations.py  check-examples-sync.py  check-skill-docs.sh
.github/workflows/: skill-gates.yml
examples-consumer/: CMakeLists.txt  README.md  main.cpp
tools/: check-claims.py  extract_blocks.py  test-skill.sh
